@@ -192,6 +192,8 @@ struct SnortConfig
     bool id_subdir;
     bool id_zero;
 
+    bool stdin_rules;
+
     char pid_filename[STD_BUF];
     char *orig_log_dir;      /* set in case of chroot */
 
